--- a/public/civil/sem1/english.html
+++ b/public/civil/sem1/english.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
-    <meta name="keywords"
-        content="gtu diploma sem-1 books download , C4300002 ,english,English download for free , Civil">
     <meta name="audience" content="Everyone">
+    <meta name="keywords"
+        content="gtu diploma sem 1 books download , 4300002 ,gtu English sem 1 book  download for free , it,computer,civil ,electrical, mechanical , all branch , english gtu papers ">
     <meta name="description"
-        content=" >English  Sem-1 book Free Download, Civil Sem-1 All Study Material free, Get GTU Diploma Civil books free download, Sem-1 Diploma Engineering">
+        content=" GTU-Diploma  English Sem-1 book, Paper, Syllabus Free Download | Sem-1 All Study Material free | Get GTU Diploma books free download | Sem-1 Diploma Engineering | For all Branch">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Civil Diploma English - KhudKibook GTU </title>
+    <title>GTU Civil Diploma English - KhudKibook </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
@@ -46,9 +46,9 @@
                 <h1 class="md111">C4300002</h1>
                 <h1 class="md111">Credit-3</h1>
                 <div>
-                    <button class="mdbtn" data-modal-id="modal-1">Book</button>
+                    <!-- <button class="mdbtn" data-modal-id="modal-1">Book</button> -->
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=1fTISxvTpFB0sjvTVZjQE_v7-XGWYo6fq">
+                    <a href="https://drive.google.com/uc?export=download&id=1PbEL53UarVv-NjqIZ2SdD-Z8Ybtw2GRN">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -57,17 +57,15 @@
                     <div class="m741852" id="modal-1">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-1
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-1
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-2
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-2
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-3
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-3
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-4
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-4
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-5
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-6
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-5
                             </a>
                             <a href="https://drive.google.com/uc?export=download&id=">Full-Book
                             </a>
@@ -77,14 +75,18 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=1bZXpB71He2xjgPOYNbI7HmaFVTHhtpx7">2022
+                            <a href="https://drive.google.com/uc?export=download&id=1YUK-Uv1zjvmVtEnkrPyVX-pUIuq2A3LR">DE
+                                Winter 2022 (New) Latest
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1zAotD83vv-DYvYdXrPESa9-qB9Aw_nnu">2021
+                            <a href="https://drive.google.com/uc?export=download&id=1zAotD83vv-DYvYdXrPESa9-qB9Aw_nnu">DE
+                                Winter 2021
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=15MHqiXaoDYQCRexIjyFgdzqDzzfOHZ7s">DE
+                                Winter 2022 (C to D new)
                             </a>
 
                         </div>
                     </div>
-
 
                 </div>
             </div>
@@ -137,7 +139,7 @@
 
             </div>
         </a>
-        
+
 
     </div>
 
@@ -146,7 +148,7 @@
         Semester-2
     </h1>
     <div aria-label="main content " class="ab12345">
-         <!-- Es  -->
+        <!-- Es  -->
         <a href="/civil/sem2/environmentandsustainability.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/005.png" alt="" srcset="">
@@ -158,56 +160,56 @@
                 </div>
             </div>
         </a>
-            <!--  Engineering Mechanics -->
-            <a href="/civil/sem2/EM.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/026.png" alt="coverpage">
-                    <div class="mali147852">
-                        <h1 class="bn159">Engineering Mechanics</h1>
-                        <h1 class="d111">C4300008</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
+        <!--  Engineering Mechanics -->
+        <a href="/civil/sem2/EM.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/026.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159">Engineering Mechanics</h1>
+                    <h1 class="d111">C4300008</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
-            </a>
-            <!-- Applied Chemistry -->
-            <a href="/civil/sem2/AC.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/024.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Applied Chemistry </h1>
-                        <h1 class="d111">C4300009</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
+            </div>
+        </a>
+        <!-- Applied Chemistry -->
+        <a href="/civil/sem2/AC.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/024.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Applied Chemistry </h1>
+                    <h1 class="d111">C4300009</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                </div>
 
 
+            </div>
+        </a>
+        <!--  Applied Mathematics -->
+        <a href="/civil/sem2/AM.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/025.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Applied Mathematics </h1>
+                    <h1 class="d111">C4320001</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
-            </a>
-            <!--  Applied Mathematics -->
-            <a href="/civil/sem2/AM.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/025.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Applied Mathematics </h1>
-                        <h1 class="d111">C4320001</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
+            </div>
+        </a>
+        <!--  Civil Engineering Drawing -->
+        <a href="/civil/sem2/AM.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/027.png" alt="" srcset="">
+                <div class="mali147852">
+                    <h1 class="bn159">Civil Engineering Drawing </h1>
+                    <h1 class="d111">C4320601</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
-            </a>
-            <!--  Civil Engineering Drawing -->
-            <a href="/civil/sem2/AM.html">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/027.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <h1 class="bn159">Civil Engineering Drawing </h1>
-                        <h1 class="d111">C4320601</h1>
-                        <h1 class="d212">Credit-4</h1>
-                        <input class="kpb789123" type="button" value="Open">
-                    </div>
-                </div>
-            </a>
+            </div>
+        </a>
 
     </div>
     <!-- Sem-3 -->
@@ -215,8 +217,8 @@
         Semester-3
     </h1>
     <div aria-label="main content " class="ab12345">
-           <!--  Surveying -->
-           <a href="/civil/sem3/Surveying.html">
+        <!--  Surveying -->
+        <a href="/civil/sem3/Surveying.html">
             <div class="abc123456">
                 <img class="i12345" src="/img/044.png" alt="coverpage">
                 <div class="mali147852">
