--- a/public/common/english.html
+++ b/public/common/english.html
@@ -48,33 +48,47 @@
                 <h1 class="md111">4300002</h1>
                 <h1 class="md111">Credit-3</h1>
                 <div>
-                    <button class="kpb789123" id="mbt75935147">Book</button>
-                    <!-- btn content -->
-                    <div id="m1111" class="m741852">
+                    <!-- <button class="mdbtn" data-modal-id="modal-1">Book</button> -->
+                    <!-- Syllabus -->
+                    <a href="https://drive.google.com/uc?export=download&id=1PbEL53UarVv-NjqIZ2SdD-Z8Ybtw2GRN">
+                        <button class="mdbtn">Syllabus</button>
+                    </a>
+                    <!-- Button 2 -->
+                    <button class="mdbtn" data-modal-id="modal-2">Paper</button>
+                    <!-- Modal 1 -->
+                    <div class="m741852" id="modal-1">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-1
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-2
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-2
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1ZhT4_6ccqMNBoX5-paAXV21hjIs45zFk">UNIT-3
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-3
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1kz7AvYv6rk6V4KyL_35BMeE9tqOmseTb">UNIT-4
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-4
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1RUbeQnccxydHyeT5TQrguO9zuagGottB">UNIT-5
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-5
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
+                            <a href="https://drive.google.com/uc?export=download&id=">Full-Book
                             </a>
                         </div>
                     </div>
+                    <!-- Modal 2 -->
+                    <div class="m741852" id="modal-2">
+                        <div class="mc7913">
+                            <span class="mc718293">&times;</span>
+                            <a href="https://drive.google.com/uc?export=download&id=1YUK-Uv1zjvmVtEnkrPyVX-pUIuq2A3LR">DE
+                                Winter 2022 (New) Latest
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1zAotD83vv-DYvYdXrPESa9-qB9Aw_nnu">DE
+                                Winter 2021
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=15MHqiXaoDYQCRexIjyFgdzqDzzfOHZ7s">DE
+                                Winter 2022 (C to D new)
+                            </a>
 
-                    <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
-                        <input class="kpb789123" type="button" value="Syllabus">
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">
-                        <input class="kpb789123" type="button" value="Paper">
-
-                    </a>
+                        </div>
+                    </div>
 
                 </div>
             </div>
