--- a/public/computer/sem1/english.html
+++ b/public/computer/sem1/english.html
@@ -47,9 +47,9 @@
                 <h1 class="md111">4300002</h1>
                 <h1 class="md111">Credit-3</h1>
                 <div>
-                    <button class="mdbtn" data-modal-id="modal-1">Book</button>
+                    <!-- <button class="mdbtn" data-modal-id="modal-1">Book</button> -->
                     <!-- Syllabus -->
-                    <a href="https://drive.google.com/uc?export=download&id=1fTISxvTpFB0sjvTVZjQE_v7-XGWYo6fq">
+                    <a href="https://drive.google.com/uc?export=download&id=1PbEL53UarVv-NjqIZ2SdD-Z8Ybtw2GRN">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -58,17 +58,15 @@
                     <div class="m741852" id="modal-1">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-1
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-1
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-2
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-2
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-3
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-3
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-4
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-4
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-5
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-6
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-5
                             </a>
                             <a href="https://drive.google.com/uc?export=download&id=">Full-Book
                             </a>
@@ -78,14 +76,18 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=1bZXpB71He2xjgPOYNbI7HmaFVTHhtpx7">2022
+                            <a href="https://drive.google.com/uc?export=download&id=1YUK-Uv1zjvmVtEnkrPyVX-pUIuq2A3LR">DE
+                                Winter 2022 (New) Latest
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1zAotD83vv-DYvYdXrPESa9-qB9Aw_nnu">2021
+                            <a href="https://drive.google.com/uc?export=download&id=1zAotD83vv-DYvYdXrPESa9-qB9Aw_nnu">DE
+                                Winter 2021
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=15MHqiXaoDYQCRexIjyFgdzqDzzfOHZ7s">DE
+                                Winter 2022 (C to D new)
                             </a>
 
                         </div>
                     </div>
-
 
                 </div>
             </div>
