--- a/public/it/sem1/english.html
+++ b/public/it/sem1/english.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
-    <meta name="keywords"
-        content="gtu diploma sem 1 books download , 4300002 ,gtu English sem 1 book  download for free , it,computer, all branch">
     <meta name="audience" content="Everyone">
+
+    <meta name="keywords"
+        content="gtu diploma sem 1 books download , 4300002 ,gtu English sem 1 book  download for free , it,computer, all branch , english gtu papers ">
     <meta name="description"
-        content=" GTU-Diploma  English Sem-1 book Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download |Sem-1 Diploma Engineering">
+        content=" GTU-Diploma  English Sem-1 book, Paper, Syllabus Free Download | Sem-1 All Study Material free | Get GTU Diploma books free download | Sem-1 Diploma Engineering | For all Branch">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> GTU IT Diploma English - KhudKibook </title>
-    <meta name="description"
-        content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/cd651.css">
@@ -50,33 +49,44 @@
                 <h1 class="md111">4300002</h1>
                 <h1 class="md111">Credit-3</h1>
                 <div>
-                    <button class="kpb789123" id="mbt75935147">Book</button>
-                    <!-- btn content -->
-                    <div id="m1111" class="m741852">
+                    <!-- <button class="mdbtn" data-modal-id="modal-1">Book</button> -->
+                    <!-- Syllabus -->
+                    <a href="https://drive.google.com/uc?export=download&id=1PbEL53UarVv-NjqIZ2SdD-Z8Ybtw2GRN">
+                        <button class="mdbtn">Syllabus</button>
+                    </a>
+                    <!-- Button 2 -->
+                    <button class="mdbtn" data-modal-id="modal-2">Paper</button>
+                    <!-- Modal 1 -->
+                    <div class="m741852" id="modal-1">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-1
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-2
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-2
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1ZhT4_6ccqMNBoX5-paAXV21hjIs45zFk">UNIT-3
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-3
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1kz7AvYv6rk6V4KyL_35BMeE9tqOmseTb">UNIT-4
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-4
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1RUbeQnccxydHyeT5TQrguO9zuagGottB">UNIT-5
+                            <a href="https://drive.google.com/uc?export=download&id=">Chapter-5
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
+                            <a href="https://drive.google.com/uc?export=download&id=">Full-Book
                             </a>
                         </div>
                     </div>
-
-                    <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
-                        <input class="kpb789123" type="button" value="Syllabus">
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">
-                        <input class="kpb789123" type="button" value="Paper">
-
-                    </a>
+                    <!-- Modal 2 -->
+                    <div class="m741852" id="modal-2">
+                        <div class="mc7913">
+                            <span class="mc718293">&times;</span>
+                            <a href="https://drive.google.com/uc?export=download&id=1YUK-Uv1zjvmVtEnkrPyVX-pUIuq2A3LR">DE Winter 2022 (New) Latest
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1zAotD83vv-DYvYdXrPESa9-qB9Aw_nnu">DE Winter 2021
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=15MHqiXaoDYQCRexIjyFgdzqDzzfOHZ7s">DE Winter 2022 (C to D new) 
+                            </a>
+                          
+                        </div>
+                    </div>
 
                 </div>
             </div>
