--- a/public/it/sem1/introductiontoitsystem.html
+++ b/public/it/sem1/introductiontoitsystem.html
@@ -50,33 +50,46 @@
                 <h1 class="md111">4311602</h1>
                 <h1 class="md111">Credit-5</h1>
                 <div>
-                    <button class="kpb789123" id="mbt75935147">Book</button>
-                    <!-- btn content -->
-                    <div id="m1111" class="m741852">
+                    <button class="mdbtn" data-modal-id="modal-1">Book</button>
+                    <!-- Syllabus -->
+                    <a href="https://drive.google.com/uc?export=download&id=18JZjqy8Lm1GPFf1ypewxgEifrZ8cARUw">
+                        <button class="mdbtn">Syllabus</button>
+                    </a>
+                    <!-- Button 2 -->
+                    <button class="mdbtn" data-modal-id="modal-2">Paper</button>
+                    <!-- Modal 1 -->
+                    <div class="m741852" id="modal-1">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
+                            <a href="https://drive.google.com/uc?export=download&id=1pa8efnNX_rIE-oHmHB-ziEalZBKRUHim">Unit-1
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-2
+                            <a href="https://drive.google.com/uc?export=download&id=1os8qwrkrE1aLP8u_lGASY-w_MEAR4lBS">Unit-2
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1ZhT4_6ccqMNBoX5-paAXV21hjIs45zFk">UNIT-3
+                            <a href="https://drive.google.com/uc?export=download&id=1aAks5Dpd6QsJStq2D969lbwXOeXxJnkW">Unit-3
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1kz7AvYv6rk6V4KyL_35BMeE9tqOmseTb">UNIT-4
+                            <a href="https://drive.google.com/uc?export=download&id=1fVTjh-ZH63pvTJRiroALmQy3xNLxSOBt">Unit-4
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1RUbeQnccxydHyeT5TQrguO9zuagGottB">UNIT-5
+                            <a href="https://drive.google.com/uc?export=download&id=1q3Res-wC0lBmKYbOXG9Ae7TwJD2UtL0n">Unit-5
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
+                            <a href="https://drive.google.com/uc?export=download&id=17tslDfPxNz-nRlzsSy-wBCsPZxXgUvZi">Unit-6
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1D5Y7q1AGF_jPUdVVrjPx7ak7P767KMYL">Full-Book
                             </a>
                         </div>
                     </div>
-
-                    <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
-                        <input class="kpb789123" type="button" value="Syllabus">
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">
-                        <input class="kpb789123" type="button" value="Paper">
-
-                    </a>
+                    <!-- Modal 2 -->
+                    <div class="m741852" id="modal-2">
+                        <div class="mc7913">
+                            <span class="mc718293">&times;</span>
+                            <a href="https://drive.google.com/uc?export=download&id=1zUJC8g8LuJbl-O38dSZUpWPzXGkIc7yw">DE Winter 2022 (New) Latest
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1752wOhSL44D4i64nkbtcHGMZUwOfNj6W">DE Winter 2021
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1JqYDnHVrpi8r1-bxGd76laopHi1xFX3U">DE Winter 2022 (C to D)
+                            </a>
+                          
+                        </div>
+                    </div>
 
                 </div>
             </div>
