--- a/public/it/sem1/pythonprogramming.html
+++ b/public/it/sem1/pythonprogramming.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem 1 books download , 4311601 ,Python Programming download for free , it">
+        content="gtu diploma sem 1 books download , 4311601 ,Python Programming download for free , it, python gtu book download ,gtu book download , python programming gtu papers  ">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Python Programming Sem-1 book Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download |Sem-1 Diploma Engineering">
+        content=" GTU | Python Programming book, Paper, Syllabus Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download | Sem-1 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTU IT Diploma Python Programming - KhudKibook </title>
+    <title>Python Programming GTU Diploma IT - KhudKibook </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
         crossorigin="anonymous"></script>
@@ -25,7 +25,7 @@
 
     </nav>
     <header>
-        <h1 class="ph748">Python Programming Study Material </h1>
+        <h1 class="ph748">Python Programming GTU Study Material </h1>
     </header>
     <!-- navinfo -->
     <div class="nv759">
@@ -41,7 +41,7 @@
         <div class="mc759351">
 
             <div class="mc7593512">
-                <img class="mc7593512345" src="/img/013.png" alt="Book Photo">
+                <img class="mc7593512345" src="/img/013.png" alt="python gtu book download ">
             </div>
             <div class="mac75935">
                 <h1 class="bn159">Python Programming</h1>
@@ -51,7 +51,7 @@
                 <div>
                     <button class="mdbtn" data-modal-id="modal-1">Book</button>
                     <!-- Syllabus -->
-                    <a href="#">
+                    <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
                         <button class="mdbtn">Syllabus</button>
                     </a>
                     <!-- Button 2 -->
@@ -60,17 +60,17 @@
                     <div class="m741852" id="modal-1">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-1
+                            <a href="https://drive.google.com/uc?export=download&id=1oFoXYvrTPAaBTxUh7Z8LEFt5GyiJTSLz">Chapter-1
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-2
+                            <a href="https://drive.google.com/uc?export=download&id=1i2enakYYlPaL5RxBHZ508VhKaZZkd2BW">Chapter-2
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-3
+                            <a href="https://drive.google.com/uc?export=download&id=1eVZyfmDNTI_PrtDwbRYDrxJDkZzqthWc">Chapter-3
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-4
+                            <a href="https://drive.google.com/uc?export=download&id=1mOYKO13xAhlszLfTRyMrHj8x8oT4lEU2">Chapter-4
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Unit-5
+                            <a href="https://drive.google.com/uc?export=download&id=1R4mMwyDsUWX7xIagWDfqo2Ol_P_YRyY3">Chapter-5
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">Full-Book
+                            <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
                             </a>
                         </div>
                     </div>
@@ -78,18 +78,13 @@
                     <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
+                            <a href="https://drive.google.com/uc?export=download&id=14aU18LE0Z3aYbjI_DHwv7QpoCidKQzeR">DE Winter 2022 (New) Latest
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-2
+                            <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">DE Winter 2021
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1ZhT4_6ccqMNBoX5-paAXV21hjIs45zFk">UNIT-3
+                            <a href="https://drive.google.com/uc?export=download&id=12LZ5Ge-aK7GuVJyymRWbre2i28Nuu4_D">DE Winter 2022 (C to D)
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1kz7AvYv6rk6V4KyL_35BMeE9tqOmseTb">UNIT-4
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1RUbeQnccxydHyeT5TQrguO9zuagGottB">UNIT-5
-                            </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
-                            </a>
+                          
                         </div>
                     </div>
 
@@ -140,25 +135,25 @@
                     <h1 class="d111">4300001</h1>
                     <h1 class="d212">Credit-4</h1>
                     <input class="kpb789123" type="button" value="Open">
-                    </div>
+                </div>
 
 
             </div>
-            </a>
-            <!-- English -->
-            <a href="/it/sem1/english.html">
-                <div class="abc123456">
+        </a>
+        <!-- English -->
+        <a href="/it/sem1/english.html">
+            <div class="abc123456">
                 <img class="i12345" src="/img/014.png" alt="coverpage">
                 <div class="mali147852">
                     <h1 class="bn159">Communication Skills in English </h1>
                     <h1 class="d111">4300002</h1>
                     <h1 class="d212">Credit-3</h1>
                     <input class="kpb789123" type="button" value="Open">
-                    </div>
+                </div>
 
 
             </div>
-            </a>
+        </a>
     </div>
     <!-- Sem-2 -->
     <h1 class="kl789123">Semester-2</h1>
